# mdarray

./: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  clippy.toml  rustfmt.toml
src/: aligned_alloc.rs  array.rs  buffer.rs  dim.rs  dimension.rs  expr.rs  expression.rs  format.rs  grid.rs  index.rs  iter.rs  iterator.rs  layout.rs  lib.rs  macros.rs  mapping.rs  operator.rs  ops.rs  order.rs  raw_grid.rs  raw_slice.rs  raw_span.rs  raw_tensor.rs  raw_vec.rs  serde.rs  shape.rs  slice.rs  span.rs  sub_array.rs  sub_grid.rs  tensor.rs  traits.rs  view.rs
src/buffer/: drain.rs  dyn_buffer.rs  mod.rs  static_buffer.rs
src/expr/: adapters.rs  buffer.rs  expr.rs  expression.rs  into_expr.rs  iter.rs  mod.rs  sources.rs
src/index/: axis.rs  mod.rs  permutation.rs  slice.rs  span.rs  view.rs
src/iter/: sources.rs
tests/: run-tests.sh  test.rs
tests/aligned_alloc/: mod.rs
