[package]
name = "mdarray"
version = "0.4.0"
edition = "2021"
rust-version = "1.65"
description = "Multidimensional array for Rust"
repository = "https://github.com/fre-hu/mdarray"
license = "MIT OR Apache-2.0"
keywords = ["array", "matrix", "multidimensional"]
categories = ["data-structures", "mathematics", "science"]

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_test = "1.0"

[features]
nightly = []
permissive-provenance = [] # Required for testing in Miri without extern types, see:
                           # https://github.com/rust-lang/unsafe-code-guidelines/issues/256
