[package]
name = "mdarray"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
description = "Multidimensional array for Rust"
repository = "https://github.com/fre-hu/mdarray"
license = "MIT OR Apache-2.0"
keywords = ["array", "matrix", "multidimensional"]
categories = ["data-structures", "mathematics", "science"]

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_test = "1.0"

[features]
nightly = [] # Required for testing in Miri by using extern types, see:
             # https://github.com/rust-lang/unsafe-code-guidelines/issues/256
