[package]
name = "mdarray"
version = "0.7.2"
edition = "2024"
rust-version = "1.89"
description = "Multidimensional array for Rust"
repository = "https://github.com/fre-hu/mdarray"
license = "MIT OR Apache-2.0"
keywords = ["array", "matrix", "multidimensional"]
categories = ["data-structures", "mathematics", "science"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0"

[features]
default = ["std"]
nightly = []
std = []
